--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body class="gradient-background">
@@ -18,12 +19,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
     <script src="./js/app.js"></script>
-    
+
     <script src="./js/services/LoginService.js"></script>
     <script src="./js/services/UserService.js"></script>
 
     <script src="./js/controllers/loginController.js"></script>
     <script src="./js/controllers/newUserController.js"></script>
+    <script src="./js/controllers/movieController.js"></script>
 
 </body>
 
