--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
     <title>Full Movies</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/geral.css">
     <link rel="stylesheet" href="./css/style.css">
-
+    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/cadastro.css">
+    <link rel="stylesheet" href="./css/home-Movies.css">
+    <link rel="stylesheet" href="./css/show-Movies.css">
+    <link rel="stylesheet" href="./css/show-user.css">
 </head>
 
 <body class="gradient-background">
@@ -22,10 +30,12 @@
 
     <script src="./js/services/LoginService.js"></script>
     <script src="./js/services/UserService.js"></script>
+    <script src="./js/services/MovieService.js"></script>
 
     <script src="./js/controllers/loginController.js"></script>
     <script src="./js/controllers/newUserController.js"></script>
     <script src="./js/controllers/movieController.js"></script>
+    <script src="./js/controllers/showMovieController.js"></script>
 
 </body>
 
