--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/home-Movies.css">
     <link rel="stylesheet" href="./css/show-Movies.css">
     <link rel="stylesheet" href="./css/show-user.css">
+    <link rel="stylesheet" href="./css/profile.css">
 </head>
 
 <body class="gradient-background">
@@ -26,7 +27,10 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
+    <script src="/assets/libs/ui-bootstrap-tpls-2.5.0.min.js"></script>
+
     <script src="./js/app.js"></script>
+    <script src="./js/services/TokenInterceptor.js"></script>
 
     <script src="./js/services/LoginService.js"></script>
     <script src="./js/services/UserService.js"></script>
@@ -36,6 +40,8 @@
     <script src="./js/controllers/newUserController.js"></script>
     <script src="./js/controllers/movieController.js"></script>
     <script src="./js/controllers/showMovieController.js"></script>
+    <script src="./js/controllers/profileController.js"></script>
+    <script src="./js/controllers/watchedMoviesController.js"></script>
 
 </body>
 
