--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <link rel="stylesheet" href="./css/geral.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/login.css">
@@ -19,6 +20,7 @@
     <link rel="stylesheet" href="./css/show-Movies.css">
     <link rel="stylesheet" href="./css/show-user.css">
     <link rel="stylesheet" href="./css/profile.css">
+    <link rel="stylesheet" href="./css/update-user.css">
 </head>
 
 <body class="gradient-background">
@@ -28,6 +30,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
     <script src="/assets/libs/ui-bootstrap-tpls-2.5.0.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="sweetalert2.all.min.js"></script>
+    <script src="sweetalert2.min.js"></script>
 
     <script src="./js/app.js"></script>
     <script src="./js/services/TokenInterceptor.js"></script>
@@ -41,7 +46,7 @@
     <script src="./js/controllers/movieController.js"></script>
     <script src="./js/controllers/showMovieController.js"></script>
     <script src="./js/controllers/profileController.js"></script>
-    <script src="./js/controllers/watchedMoviesController.js"></script>
+    <script src="./js/controllers/updateUserController.js"></script>
 
 </body>
 
