--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script src="./js/controllers/showMovieController.js"></script>
     <script src="./js/controllers/profileController.js"></script>
     <script src="./js/controllers/updateUserController.js"></script>
+    <script src="./js/controllers/manageMovieController.js"></script>
 
 </body>
-
 </html>
