--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/show-user.css">
     <link rel="stylesheet" href="./css/profile.css">
     <link rel="stylesheet" href="./css/update-user.css">
+    <link rel="stylesheet" href="./css/manage-movies.css">
 </head>
 
 <body class="gradient-background">
