--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./css/profile.css">
     <link rel="stylesheet" href="./css/update-user.css">
     <link rel="stylesheet" href="./css/manage-movies.css">
+    <link rel="stylesheet" href="./css/every-user.css">
 </head>
 
 <body class="gradient-background">
@@ -49,6 +50,7 @@
     <script src="./js/controllers/profileController.js"></script>
     <script src="./js/controllers/updateUserController.js"></script>
     <script src="./js/controllers/manageMovieController.js"></script>
+    <script src="./js/controllers/everyUserController.js"></script>
 
 </body>
 </html>
