--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./css/update-user.css">
     <link rel="stylesheet" href="./css/manage-movies.css">
     <link rel="stylesheet" href="./css/every-user.css">
+    <link rel="stylesheet" href="./css/teste.css">
 </head>
 
 <body class="gradient-background">
@@ -51,6 +52,7 @@
     <script src="./js/controllers/updateUserController.js"></script>
     <script src="./js/controllers/manageMovieController.js"></script>
     <script src="./js/controllers/everyUserController.js"></script>
+    <!-- <script src="./js/controllers/testeController.js"></script> -->
 
 </body>
 </html>
