--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/update-user.css">
     <link rel="stylesheet" href="./css/manage-movies.css">
     <link rel="stylesheet" href="./css/every-user.css">
-    <link rel="stylesheet" href="./css/teste.css">
+    <link rel="stylesheet" href="./css/recover.css">
 </head>
 
 <body class="gradient-background">
@@ -43,6 +43,8 @@
     <script src="./js/services/LoginService.js"></script>
     <script src="./js/services/UserService.js"></script>
     <script src="./js/services/MovieService.js"></script>
+    <script src="./js/services/RecoveryService.js"></script>
+    <script src="./js/services/alertMessage.js"></script>
 
     <script src="./js/controllers/loginController.js"></script>
     <script src="./js/controllers/newUserController.js"></script>
@@ -52,7 +54,8 @@
     <script src="./js/controllers/updateUserController.js"></script>
     <script src="./js/controllers/manageMovieController.js"></script>
     <script src="./js/controllers/everyUserController.js"></script>
-    <!-- <script src="./js/controllers/testeController.js"></script> -->
+    <script src="./js/controllers/passwordRecoverController.js"></script>
+    <script src="./js/controllers/changePasswordController.js"></script>
 
 </body>
 </html>
