--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <script src="./js/controllers/everyUserController.js"></script>
     <script src="./js/controllers/passwordRecoverController.js"></script>
     <script src="./js/controllers/changePasswordController.js"></script>
+    <script src="./js/controllers/allCoversController.js"></script>
 
 </body>
 </html>
