--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-BR" ng-app="movies">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Full Movies</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="sweetalert2.min.css">
-    <link rel="stylesheet" href="./css/geral.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/login.css">
-    <link rel="stylesheet" href="./css/cadastro.css">
-    <link rel="stylesheet" href="./css/home-Movies.css">
-    <link rel="stylesheet" href="./css/show-Movies.css">
-    <link rel="stylesheet" href="./css/profile.css">
-    <link rel="stylesheet" href="./css/update-user.css">
-    <link rel="stylesheet" href="./css/manage-movies.css">
-    <link rel="stylesheet" href="./css/every-user.css">
-    <link rel="stylesheet" href="./css/recover.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="sweetalert2.min.css" />
+    <link rel="stylesheet" href="./css/geral.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/cadastro.css" />
+    <link rel="stylesheet" href="./css/home-Movies.css" />
+    <link rel="stylesheet" href="./css/show-Movies.css" />
+    <link rel="stylesheet" href="./css/profile.css" />
+    <link rel="stylesheet" href="./css/update-user.css" />
+    <link rel="stylesheet" href="./css/manage-movies.css" />
+    <link rel="stylesheet" href="./css/every-user.css" />
+    <link rel="stylesheet" href="./css/recover.css" />
+  </head>
 
-<body class="gradient-background">
+  <body class="gradient-background">
     <div>
-        <ui-view></ui-view>
+      <ui-view></ui-view>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
@@ -47,15 +53,12 @@
 
     <script src="./js/controllers/loginController.js"></script>
     <script src="./js/controllers/newUserController.js"></script>
-    <script src="./js/controllers/movieController.js"></script>
+    <script src="./js/controllers/homeController.js"></script>
     <script src="./js/controllers/showMovieController.js"></script>
     <script src="./js/controllers/profileController.js"></script>
     <script src="./js/controllers/updateUserController.js"></script>
     <script src="./js/controllers/manageMovieController.js"></script>
     <script src="./js/controllers/everyUserController.js"></script>
-    <script src="./js/controllers/passwordRecoverController.js"></script>
-    <script src="./js/controllers/changePasswordController.js"></script>
     <script src="./js/controllers/allCoversController.js"></script>
-
-</body>
+  </body>
 </html>
