--- a/index.html
+++ b/index.html
@@ -18,17 +18,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="sweetalert2.min.css" />
-    <link rel="stylesheet" href="./css/geral.css" />
+    <link rel="stylesheet" href="./css/doca.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/login.css" />
-    <link rel="stylesheet" href="./css/cadastro.css" />
-    <link rel="stylesheet" href="./css/home-Movies.css" />
-    <link rel="stylesheet" href="./css/show-Movies.css" />
-    <link rel="stylesheet" href="./css/profile.css" />
-    <link rel="stylesheet" href="./css/update-user.css" />
-    <link rel="stylesheet" href="./css/manage-movies.css" />
-    <link rel="stylesheet" href="./css/every-user.css" />
-    <link rel="stylesheet" href="./css/recover.css" />
+    <link rel="stylesheet" href="./css/ui.css" />
   </head>
 
   <body class="gradient-background">
@@ -45,9 +37,9 @@
     <script src="./js/app.js"></script>
     <script src="./js/services/TokenInterceptor.js"></script>
 
-    <script src="./js/services/LoginService.js"></script>
     <script src="./js/services/UserService.js"></script>
     <script src="./js/services/MovieService.js"></script>
+    <script src="./js/services/PostService.js"></script>
     <script src="./js/services/RecoveryService.js"></script>
     <script src="./js/services/alertMessage.js"></script>
 
@@ -57,8 +49,11 @@
     <script src="./js/controllers/showMovieController.js"></script>
     <script src="./js/controllers/profileController.js"></script>
     <script src="./js/controllers/updateUserController.js"></script>
+    <script src="./js/controllers/navbarController.js"></script>
     <script src="./js/controllers/manageMovieController.js"></script>
     <script src="./js/controllers/everyUserController.js"></script>
     <script src="./js/controllers/allCoversController.js"></script>
+
+    <script src="./js/directives/uiNavbarDirective.js"></script>
   </body>
 </html>
