--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="sweetalert2.min.css" />
     <link rel="stylesheet" href="./css/doca.css" />
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/ui.css" />
   </head>
 
@@ -31,13 +29,12 @@
     <script src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
     <script src="/assets/libs/ui-bootstrap-tpls-2.5.0.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="sweetalert2.all.min.js"></script>
-    <script src="sweetalert2.min.js"></script>
 
     <script src="./js/app.js"></script>
     <script src="./js/services/TokenInterceptor.js"></script>
 
     <script src="./js/services/UserService.js"></script>
+    <script src="./js/services/LoginService.js"></script>
     <script src="./js/services/MovieService.js"></script>
     <script src="./js/services/PostService.js"></script>
     <script src="./js/services/RecoveryService.js"></script>
