refactor: Update UI styles and add flex container for alignment
This commit updates the UI styles for the recover, update-user, every-user, cadastro, manage-movies, and geral CSS files to improve visual consistency. Additionally, a new CSS class "justify-self-container" is added to create a flex container that centers its content horizontally and vertically. This container is used to align elements within the UI.

- Update the recover.css, update-user.css, every-user.css, cadastro.css, manage-movies.css, and geral.css files
- Add the ".justify-self-container" CSS class

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script src="./js/controllers/loginController.js"></script>
     <script src="./js/controllers/newUserController.js"></script>
     <script src="./js/controllers/homeController.js"></script>
-    <script src="./js/controllers/showMovieController.js"></script>
+    <script src="./js/controllers/showPostController.js"></script>
     <script src="./js/controllers/profileController.js"></script>
     <script src="./js/controllers/updateUserController.js"></script>
     <script src="./js/controllers/navbarController.js"></script>
@@ -51,6 +51,7 @@
     <script src="./js/controllers/everyUserController.js"></script>
     <script src="./js/controllers/allCoversController.js"></script>
 
-    <script src="./js/directives/uiNavbarDirective.js"></script>
+    <script src="./js/directives/navbar.js"></script>
+    <script src="./js/directives/loading.js"></script>
   </body>
 </html>
