refactor: Add moment.js and angular-moment.js dependencies, update filters and controllers
This commit adds the moment.js and angular-moment.js dependencies to the project, allowing for better date formatting and manipulation. It also updates the format-date and phone filters to utilize the new dependencies. Additionally, the showPostController is modified to include a loading state while fetching data.

- Add moment.min.js and angular-moment.min.js to the assets/libs directory
- Update the format-date.js and phone.js filters to use moment.js
- Modify the showPostController to include a loading state

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
     <script src="/assets/libs/ui-bootstrap-tpls-2.5.0.min.js"></script>
+    <script src="/assets/libs/moment.min.js"></script>
+    <script src="/assets/libs/angular-moment.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="./js/app.js"></script>
@@ -39,6 +41,9 @@
     <script src="./js/services/PostService.js"></script>
     <script src="./js/services/RecoveryService.js"></script>
     <script src="./js/services/alertMessage.js"></script>
+
+    <script src="./js/filters/format-date.js"></script>
+    <script src="./js/filters/phone.js"></script>
 
     <script src="./js/controllers/loginController.js"></script>
     <script src="./js/controllers/newUserController.js"></script>
