--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
+
+    <script src="/assets/libs/ui-bootstrap-2.5.0.min.js"></script>
     <script src="/assets/libs/ui-bootstrap-tpls-2.5.0.min.js"></script>
+
     <script src="/assets/libs/moment.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
