refactor: Update UI styles and add modal class

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/doca.css" />
+    <link rel="stylesheet" href="./css/ui-boostrap.css" />
     <link rel="stylesheet" href="./css/ui.css" />
   </head>
 
@@ -28,8 +29,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js"></script>
     <script src="//unpkg.com/@uirouter/angularjs@1.0.7/release/angular-ui-router.min.js"></script>
 
-    <script src="/assets/libs/ui-bootstrap-2.5.0.min.js"></script>
-    <script src="/assets/libs/ui-bootstrap-tpls-2.5.0.min.js"></script>
+    <script src="/assets/libs/ui-bootstrap.min.js"></script>
+    <script src="/assets/libs/ui-bootstrap-tpls.min.js"></script>
 
     <script src="/assets/libs/moment.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -49,7 +50,10 @@
     <script src="./js/controllers/newUserController.js"></script>
     <script src="./js/controllers/homeController.js"></script>
     <script src="./js/controllers/showPostController.js"></script>
-    <script src="./js/controllers/navbarController.js"></script>
+    <script src="./js/controllers/navbar.js"></script>
+    <script src="./js/controllers/modal-login.js"></script>
+    <script src="./js/controllers/modal-signup.js"></script>
+    <script src="./js/controllers/modal-post.js"></script>
 
     <script src="./js/directives/navbar.js"></script>
     <script src="./js/directives/loading.js"></script>
