refactor: Update homeController to lazy load posts and implement infinite scrolling
Update the homeController to implement lazy loading for posts, improving page load performance. Also, implement infinite scrolling to load more posts as the user scrolls near the bottom of the page.

- Add lazy loading for posts in homeController
- Implement infinite scrolling to load more posts

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
     <script src="./js/filters/format-date.js"></script>
     <script src="./js/filters/phone.js"></script>
+    <script src="./js/filters/truncate.js"></script>
 
     <script src="./js/controllers/loginController.js"></script>
     <script src="./js/controllers/newUserController.js"></script>
