refactor: Remove unused LoginService and related files
Remove the unused LoginService and its related files, including LoginService.js, loginController.js, and login.html. These files are no longer needed in the codebase.

- Delete LoginService.js
- Delete loginController.js
- Delete login.html

--- a/index.html
+++ b/index.html
@@ -39,17 +39,14 @@
     <script src="./js/services/TokenInterceptor.js"></script>
 
     <script src="./js/services/UserService.js"></script>
-    <script src="./js/services/LoginService.js"></script>
     <script src="./js/services/PostService.js"></script>
     <script src="./js/services/alertMessage.js"></script>
 
     <script src="./js/filters/format-date.js"></script>
     <script src="./js/filters/phone.js"></script>
 
-    <script src="./js/controllers/loginController.js"></script>
-    <script src="./js/controllers/newUserController.js"></script>
-    <script src="./js/controllers/homeController.js"></script>
-    <script src="./js/controllers/showPostController.js"></script>
+    <script src="./js/controllers/home.js"></script>
+    <script src="./js/controllers/show-post.js"></script>
     <script src="./js/controllers/navbar.js"></script>
     <script src="./js/controllers/modal-login.js"></script>
     <script src="./js/controllers/modal-signup.js"></script>
