refactor: Add modal-edit.js to index.html
Include the modal-edit.js file in the index.html to enable the functionality of editing posts in the application.

- Add modal-edit.js to index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="./js/controllers/modal-login.js"></script>
     <script src="./js/controllers/modal-signup.js"></script>
     <script src="./js/controllers/modal-post.js"></script>
+    <script src="./js/controllers/modal-edit.js"></script>
 
     <script src="./js/directives/navbar.js"></script>
     <script src="./js/directives/loading.js"></script>
