--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="./js/app.js"></script>
-    <script src="./js/services/TokenInterceptor.js"></script>
+    <script src="./js/services/token.js"></script>
 
-    <script src="./js/services/UserService.js"></script>
-    <script src="./js/services/PostService.js"></script>
-    <script src="./js/services/alertMessage.js"></script>
+    <script src="./js/services/user.js"></script>
+    <script src="./js/services/post.js"></script>
+    <script src="./js/services/alert.js"></script>
 
     <script src="./js/filters/format-date.js"></script>
     <script src="./js/filters/phone.js"></script>
